// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="card search-communities"
>
  <div
    className="card-header"
  >
    <strong>
      Communities
    </strong>
  </div>
  <div
    className="card-body"
  >
    <div
      className="community-list"
    >
      <div
        className="list-item"
      >
        <div
          className="item-header"
        >
          <a
            href="/created/hive-148441"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/hive-148441/avatar/medium)",
                }
              }
            />
          </a>
          <div
            className="item-title"
          >
            <a
              href="/created/hive-148441"
              onClick={[Function]}
            >
              GEMS
            </a>
            <div
              className="item-sub-title"
            >
              4,086 members
            </div>
          </div>
        </div>
        <div
          className="item-about"
        >
          To highlight true Gems of Hive community with User Retention as primary objective.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) No matches 1`] = `
<div
  className="card search-communities"
>
  <div
    className="card-header"
  >
    <strong>
      Communities
    </strong>
  </div>
  <div
    className="card-body"
  >
    <span
      className="text-muted"
    >
      Nothing found
    </span>
  </div>
</div>
`;

exports[`(2) No matches 2`] = `
<div
  className="card search-communities"
>
  <div
    className="card-header"
  >
    <strong>
      Communities
    </strong>
  </div>
  <div
    className="card-body"
  >
    <span
      className="text-muted"
    >
      Nothing found
    </span>
  </div>
</div>
`;
